# oceansdb

./: .travis.yml  .zenodo.json  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  VERSION  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  publish-to-pypi.yml
WOA/: __init__.py  utils.py  woa.py
docs/: conf.py  environment.yml  index.rst  installation.rst  usage.rst
oceandb/: __init__.py  utils.py  woa.py
oceandb/datasource/: woa.json  woa13.json
oceansdb/: __init__.py  cars.py  common.py  etopo.py  utils.py  woa.py
oceansdb/datasource/: cars.json  etopo.json  woa.json  woa13.json  woa18.json
pyWOA/: __init__.py  utils.py  woa.py
tests/: test_CARS_from_nc.py  test_ETOPO_from_nc.py  test_WOA_from_nc.py  test_cars_data.py  test_crop.py
