[build-system]
requires = [
  "setuptools >= 48",
  "setuptools_scm[toml] >= 6.2",
  "setuptools_scm_git_archive",
  "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name="oceansdb"
dynamic = ["version"]
description="Subsample ocean climatologies and reference data"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["WOA", "World Ocean Atlas", "climatology", "oceanography",
            "ETOPO", "temperature", "salinity", "bathymetry", "CARS"]
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.14",
  "scipy>=1.1",
  "netCDF4>=1.2.4",
  "supportdata>=0.1.3",
]

[project.optional-dependencies]
dev = [
  "twine >= 1.8.1",
  "sphinx>=1.5.1",
]
test = [
  "hypothesis >= 6.29.3",
  "pytest >= 5.0.0",
  "pytest-cov[all]",
  "pip >= 9.0.1",
  "flake8 >= 3.2.1",
  "tox >= 2.3.3",
  "coverage >= 4.2",
  "supportdata >= 0.1.2",
]

[project.urls]
repository = "https://github.com/castelao/oceansdb"

[tool.black]
line-length = 88

[tool.setuptools_scm]
write_to = "oceansdb/version.py"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"

[tool.ruff]
select = ["A", "I", "W"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = []
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
]
per-file-ignores = {}

line-length = 88

# Assume Python 3.7.
target-version = "py37"

[tool.ruff.pydocstyle]
convention = "numpy"
